--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jotai": "^2.7.1",
     "js-base64": "^3.7.7",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
