Update loading indicator in CocktailDetails component

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.0",
     "jotai": "^2.7.1",
     "js-base64": "^3.7.7",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "node-fetch": "^3.3.2",
@@ -44,6 +45,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
