--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
+    "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
