--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.1.7",
     "jotai": "^2.7.1",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
