--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
+    "next-pwa": "^5.6.0",
     "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^3.3.2",
     "react": "^18",
