--- a/package.json
+++ b/package.json
@@ -27,25 +27,23 @@
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "next-pwa": "^5.6.0",
+    "npm": "^10.8.1",
     "react": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-social-icons": "^6.7.0",
+    "react-use-infinite-scroll-hook": "^1.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/cookie": "^0.6.0",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
     "@types/react": "^18",
     "@types/uuid": "^9.0.7",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
